# agentic-secrets

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Package.swift  README.md  ROADMAP.md  SECURITY.md  version.env
.codex/environments/: environment.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
Docs/: ACCEPTANCE_CRITERIA.md  FUTURE_DEVELOPER_ID.md  FUTURE_ENDPOINT_SECURITY.md  IMPLEMENTATION_MAP.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  OPERATIONS.md  THESAURUS.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  VERIFIED_INVOCATION_CONTEXT_PLAN.md  WINDOWS_SUPPORT_V0.md
Docs/adr/: 0001-windows-rust-runtime.md  0002-windows-separate-implementation.md  0003-windows-11-baseline.md  0004-windows-per-user-broker.md  0005-windows-dpapi-file-store.md  0006-windows-named-pipe-ipc.md  0007-windows-createprocess-env-delivery.md  0008-windows-delivery-sink-abstraction.md  0009-future-windows-linux-ui.md
Docs/contracts/: windows-initial.md
Sources/APISessionDaemon/: main.swift
Sources/AgenticFortressCLI/: main.swift
Sources/AgenticFortressContractTests/: main.swift
Sources/AgenticFortressCore/: ActionClassification.swift  Audit.swift  BWSProvider.swift  Configuration.swift  DecisionManifest.swift  DynamicAdapters.swift  FoundationSupport.swift  MCPBridge.swift  MacOSIntegration.swift  PolicyRepository.swift  Profiles.swift  Proxy.swift  PublicAPITripwire.swift  Redactor.swift  ReleaseGates.swift  RollbackRecovery.swift  SecretStore.swift  TargetAssessment.swift
Sources/AgenticFortressCoreDaemon/: main.swift
Sources/AgenticFortressMcpd/: main.swift
Sources/AgenticFortressShim/: main.swift
Sources/BitwardenProviderDaemon/: main.swift
Sources/Broker/: APISession.swift  ActionClassification.swift  AgentRestartNotice.swift  Audit.swift  BitwardenProvider.swift  BrokerIPC.swift  CommandLineToolRegistration.swift  CommandPolicyPacks.swift  CommandShim.swift  CommandShimExecution.swift  CommandShimInstallation.swift  Configuration.swift  ControlPlane.swift  DeliveryContracts.swift  DeliveryDecisionManifest.swift  DeliveryGrant.swift  EnvironmentScrubber.swift  FoundationSupport.swift  InvocationHandleStore.swift  MCPBridge.swift  MacOSIntegration.swift  Policy.swift  PublicAPITripwire.swift  Redactor.swift  ReleaseGates.swift  RemoteDelivery.swift  SecretStore.swift  ShellStartupFilePolicy.swift  ToolRegistryIntegrity.swift
Sources/BrokerDaemon/: main.swift
Sources/Bwsd/: main.swift
Sources/CLI/: main.swift
Sources/CommandShim/: main.swift
Sources/ContractTests/: main.swift
Sources/Core/: ActionClassification.swift  Audit.swift  BWSProvider.swift  CLIRegistration.swift  CLIRegistryIntegrity.swift  CLIShim.swift  CLIUnlockGrant.swift  Configuration.swift  CoreIPC.swift  DecisionManifest.swift  DynamicAdapters.swift  EnvironmentScrubber.swift  InvocationHandleStore.swift  MacOSIntegration.swift  (+8 more)
Tests/: README.md
config/: default.agentic-fortress.json  default.agentic-secrets.json
packaging/: AgenticFortress.entitlements  approved-core-entitlements.plist  make_icon.swift
platform/windows/: Cargo.toml
platform/windows/crates/agentic-secrets-win-broker/: Cargo.toml
platform/windows/crates/agentic-secrets-win-broker/src/: lib.rs  main.rs
platform/windows/crates/agentic-secrets-win-contracts/: Cargo.toml
platform/windows/crates/agentic-secrets-win-contracts/src/: audit.rs  environment.rs  lib.rs  nonce.rs  protocol.rs  redaction.rs
platform/windows/crates/agentic-secrets-win-ipc/: Cargo.toml
platform/windows/crates/agentic-secrets-win-ipc/src/: lib.rs  named_pipe.rs
platform/windows/crates/agentic-secrets-win-run/: Cargo.toml
platform/windows/crates/agentic-secrets-win-run/src/: lib.rs  main.rs  process.rs
platform/windows/crates/agentic-secrets-win-store/: Cargo.toml
platform/windows/crates/agentic-secrets-win-store/src/: dpapi.rs  lib.rs
platform/windows/tests/: Cargo.toml  dpapi_store_contracts.rs  env_delivery_contracts.rs  named_pipe_auth_contracts.rs
platform/windows/tests/src/: lib.rs
script/: build_and_run.sh  ui_smoke.sh
scripts/: check_entitlements_diff.sh  check_secret_authority.sh  ci.sh  create_release_evidence.sh  inspect_signing.sh  install_local.sh  interactive_keychain_prompt_check.sh  package_release.sh  setup_dev_signing.sh  sign_notarize_release.sh  tahoe_compatibility_check.sh  uninstall_local.sh  validate_release_artifact.sh
(+45 files in other folders)
