[package]
name = "agentic-secrets-win-broker"
version = "0.1.0-alpha.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agentic-secrets-win-contracts = { path = "../agentic-secrets-win-contracts" }
agentic-secrets-win-store = { path = "../agentic-secrets-win-store" }
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zeroize.workspace = true
