[package]
name = "agentic-secrets-win-ipc"
version = "0.1.0-alpha.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agentic-secrets-win-contracts = { path = "../agentic-secrets-win-contracts" }
serde.workspace = true
thiserror.workspace = true
time.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
